# cse125-sp22-group4

./: .gitignore  CMakeLists.txt  Master.strings.bank  README.md  build.sh  conanfile.txt  config.yaml  config.yaml.example  cse125-sp22-group4.sln
Client/: CMakeLists.txt  Client.vcxproj  Client.vcxproj.filters
Client/include/: Client.h  ClientGame.h  ClientNetwork.h  main.h
Client/src/: Client.cpp  ClientGame.cpp  ClientNetwork.cpp  main.cpp  stb_image.h
Graphics/: CMakeLists.txt
Graphics/include/: Camera.h  Client.h  ClientNetwork.h  Cube.h  Model.h  ShaderUtil.h  TexturedMesh.h  main.h
Graphics/src/: Camera.cpp  ClientGame.cpp  ObjectLoader.cpp  Shader.cpp  TexturedMesh.cpp  ThirdPersonCamera.cpp  main.cpp
Server/: CMakeLists.txt  Server.vcxproj  Server.vcxproj.filters
Server/include/: ServerGame.h  ServerNetwork.h  Util.h
Server/src/: Server.cpp  ServerGame.cpp  ServerNetwork.cpp  Util.cpp
fonts/Gidole/: License.txt
include/: Camera.h  Client.h  Cube.h  GraphicObject.h  Mesh.h  Mesh1.h  Model.h  ObjectLoader.h  PrimitiveMesh.h  ShaderUtil.h  TexturedMesh.h  ThirdPersonCamera.h  main.h
lib/Audio/: CMakeLists.txt  Master.strings.bank
lib/Audio/include/: AudioEngine.h
lib/Audio/src/: AudioEngine.cpp
lib/Constants/: CMakeLists.txt  Constants.vcxproj  Constants.vcxproj.filters
lib/Constants/include/: constants.h
lib/Graphics/: CMakeLists.txt
lib/Graphics/include/: Animation.h  Animator.h  Bone.h  Camera.h  CollisionDetector.h  FakeModel.h  GraphicObject.h  Maze.h  Model.h  ObjectLoader.h  ParticleSystem.h  PrimitiveMesh.h  SceneLoader.h  Shader.h  ShaderUtil.h  Skybox.h  TexturedMesh.h  ThirdPersonCamera.h  Tokenizer.h
lib/Graphics/src/: Animation.cpp  Animator.cpp  Bone.cpp  Camera.cpp  CollisionDetector.cpp  Cube.cpp  FakeModel.cpp  Maze.cpp  Model.cpp  ParticleSystem.cpp  PrimitiveMesh.cpp  SceneLoader.cpp  Skybox.cpp  TexturedMesh.cpp  ThirdPersonCamera.cpp  Tokenizer.cpp
lib/Logic/: CMakeLists.txt  Logic.vcxproj  Logic.vcxproj.filters
lib/Logic/include/: Item.h  Player.h
lib/Logic/src/: Item.cpp  Player.cpp
lib/Net/: Net.cpp  Net.vcxproj  Net.vcxproj.filters
lib/Net/include/: NetworkServices.h  Packets.h
lib/Net/src/: Network.cpp  NetworkServices.cpp  Packets.cpp
lib/Network/: CMakeLists.txt  Network.vcxproj  Network.vcxproj.filters
lib/Network/include/: NetworkData.h  Packets.h
lib/Network/src/: NetworkServices.cpp  Packets.cpp
objects/: Geisel.fbx  default.mtl
objects/DiplomaFrame/: DiplomaFrame.fbx
objects/Geisel/: Geisel.fbx  geisel.mtl  untitled.blend
objects/Kachujin/: jog.fbx
objects/baby_maze/: box666.mtl
objects/backpack/: backpack.mtl
objects/backpack2/: backpack2.FBX
objects/bear/: default.mtl
objects/books/: books.fbx  untitled.blend
objects/cat/: cat.fbx  cat.mtl  cat_idle.fbx  cat_idle_new.fbx  cat_idle_test8.fbx  new_cat_idle.blend  new_cat_idle.blend1  new_cat_idle.fbx  small_cat_idle.fbx  smallcat.mtl  untitled.blend  untitled.blend1
objects/cat/cat_walk/: cat_walk.blend  cat_walk.blend1  cat_walk.fbx  cat_walking.fbx
objects/collision/: All_Top.035.mtl  Maze_Top.mtl  scene.txt
objects/computer/: BM86_Portable.blend  computer.fbx
objects/computer/IllustratorDetails/: Details.ai
objects/diploma/: diploma.dae  diploma.fbx
objects/fallenstar/: fallenstar.blend  fallenstar.mtl
objects/knight/: knight.mtl
objects/maze/: maze3.mtl  mazeColorful.mtl
objects/maze_textured/: Maze3D.mtl  mazeTextured.mtl
objects/morak/: morak.fbx  morak_samba_small.fbx  morak_small_capoeira.fbx
objects/mouse/: mouse.blend  mouse.blend1  mouse.fbx  mouse.mtl  mouse_bigger.blend  mouse_bigger.blend1  mouse_idle.fbx  mouse_idle_old.fbx  untitled.blend
objects/mouse/mouse_walk/: mouse_walk_bigger.blend  mouse_walk_bigger.blend1  mouse_walking.fbx  mouse_walking_old.fbx
objects/new_maze_collision/: maze_ver2@10x.mtl  maze_ver2_obb@10x.blend  maze_ver2_obb@10x.blend1  new_maze.mtl  new_maze_obb.blend  new_maze_obb.blend1  scene.txt  wall_obb.030.mtl
objects/scroll/: Scroll.fbx  Scroll.mtl  untitled.blend
objects/stonehenge/: stonehenge.blend  stonehenge.mtl
objects/sungod/: sungod.mtl
scripts/: SceneExport.py  scene.txt  testblend.blend
shaders/: basicShader.frag  basicShader.vert  normalShader.frag  normalShader.vert  particleShader.frag  particleShader.vert  shader.frag  shader.vert  skyboxShader.frag  skyboxShader.vert
src/: CMakeLists.txt  Camera.cpp  Client.cpp  Cube.cpp  Model.cpp  ObjectLoader.cpp  PrimitiveMesh.cpp  TexturedMesh.cpp  ThirdPersonCamera.cpp  main.cpp
